# gpu-port-opt

./: .gitignore  README.md  pyproject.toml
src/data/: download_data.py
src/feature_engineering/: technical_indicators.py
src/optimization/: portfolio_optimization.py
src/regime_detection/: regime_detection.py
tests/data/: test_data_download.py
tests/feature_engineering/: test_feature_engineering.py
tests/optimization/: test_portfolio_optimization.py
tests/regime_detection/: test_regime_detection.py
